# oxidize-json

./: README.md
.github/workflows/: oxidize-json.yml
oxidize-json/: Cargo.toml
oxidize-json/crates/libs/auth/: Cargo.toml
oxidize-json/crates/libs/core/: Cargo.toml
oxidize-json/crates/libs/utilis/: Cargo.toml
oxidize-json/crates/services/cli/: Cargo.toml
oxidize-json/crates/services/cli/src/: main.rs
oxidize-json/crates/services/cli/src/commands/: cli.rs  mod.rs  read.rs
oxidize-json/crates/services/web/: Cargo.toml
oxidize-json/crates/tools/: Cargo.toml
oxidize-json/docs/: 20250314_initial_project_structure.txt  20250408_project_structure_initial_dependencies.md  20251003_initial_project_setup.txt
oxidize-json/docs/architecture-log/: 20250408_project_structure_initial_dependencies.md  20250409_adding_cli_json_parser_poc.md  20250409_adding_dependencies.md
oxidize-json/files/: sample01.json
oxidize-json/src/: generator.rs  main.rs
oxidize-json/src/core/: generator.rs  mod.rs
