# This Cargo.toml represents a virtual manifest for a workspace.
[workspace.lints.rust]
unsafe_code = "forbid"

[package]
name = "oxidize-json"
version = "0.1.0"
edition = "2021"
authors = ["dejan"]

[workspace]

resolver = "2"
members = [
    # -- App libs
    "crates/libs/auth",
    "crates/libs/core",
    # -- App services
    "crates/services/cli",
    "crates/services/web",
    # -- App tools
    "crates/tools",
]

[[bin]]
name = "cli"
path = "crates/services/cli/src/main.rs"
