# This Cargo.toml represents a virtual manifest for a workspace.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]

resolver = "2"
members = [
    # -- App libs
    "crates/libs/auth",
    "crates/libs/core",
    # -- App services
    "crates/services/cli",
    "crates/services/web",
    # -- App tools
    "crates/tools",
]
