[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.35", features = ["derive"] }
serde_derive = "=1.0.219"
core = { path = "../../libs/core" }
# schemars = "0.8"         # For automatic schema gen
# jsonschema = "0.17"      # For schema validation
